--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/comp426-2022-fall/a04-SirPanda88/issues"
   },
-  "homepage": "https://github.com/comp426-2022-fall/a04-SirPanda88#readme"
+  "homepage": "https://github.com/comp426-2022-fall/a04-SirPanda88#readme",
+  "dependencies": {
+    "minimist": "^1.2.7"
+  }
 }
