--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/comp426-2022-fall/a04-SirPanda88#readme",
   "dependencies": {
+    "express": "^4.18.2",
     "minimist": "^1.2.7"
   }
 }
